# horaizon-3.0

./: .gitattributes  .gitignore  README.md
.agents/: AGENTS.md
.agents/rules/: horaizon-3-ruleset.md
_architecture/: repo_index.md
_architecture/contracts/hbp/: API_REFERENCE.md  hbp_logging_spec.md  hbp_v2_spec.md
_architecture/contracts/hbp/schema/: hbp_code_viz.toml  hbp_core.toml  hbp_diary.toml  hbp_governor.toml  hbp_logging.toml  hbp_resume.toml
_architecture/decisions/: ADR-001_native_over_sdui.md
_architecture/progress/: week_01_2026-07-21.md  week_01_progress.md
_architecture/reference/: client_flutter.md  horAIzon_2_0_full_topology.md  shua_code_visualizer.md  shua_diary.md  shua_governor.md  shua_resume.md  sync_contracts.py
_architecture/reference/old schema/: ai_providers.json  database_tables.json  hbp_frame.json  intent_classification.json  log_spec.json  meta.json  module_registry.json  rpc_keys.json  rpc_methods.json  sdui_blueprints.json  sdui_spec.json  telemetry.json  terminal_quick_commands.json
_architecture/reference/shua_governor/: .gitignore  Cargo.toml  GOVERNOR_MASTERPLAN.md  summary.md  task.md
_architecture/reference/shua_governor/src/: main.rs
_architecture/reference/shua_governor/src/governor/: cgroups.rs  media_gc.rs  mod.rs  registry.rs  supervisor.rs
_architecture/reference/shua_governor/src/logging/: bridge.rs  entry.rs  flush.rs  listener.rs  mod.rs
_architecture/reference/shua_governor/src/proxy/: handler.rs  mod.rs  ws_proxy.rs
_architecture/reference/shua_governor/src/routes/: ai_proxy.rs  dashboard.rs  health.rs  logs.rs  manifest.rs  media.rs  media_dav.rs  mod.rs  module_control.rs  module_ready.rs  preactivation.rs  sse_metrics.rs
_architecture/reference/shua_governor/src/sdui/: builder.rs  node.rs
_architecture/specs/client_flutter/: client_flutter_spec.md
_architecture/specs/shua_governor/: shua_governor_spec.md
_architecture/tasks/: master_task_roadmap.md
_architecture/tasks/active/: TASK-001_pi5_ssh_and_cleanup.md  TASK-002_vscode_workspace_setup.md  TASK-003_governor_cargo_scaffold.md  TASK-004_governor_hbp_broker.md  TASK-005_governor_process_registry.md  TASK-006_governor_ollama_ai_dreamloop.md  TASK-007_governor_config_systemd_deploy.md  TASK-008_flutter_project_scaffold.md  TASK-009_flutter_hbp_client.md  TASK-010_flutter_router_splash_theme.md  TASK-011_flutter_dashboard_governor_screens.md  TASK-012_flutter_settings_connection_banner.md  TASK-013_local_ai_agent_infrastructure.md  TASK-014_shua_aspnet_portal.md  TASK-015_shua_code_visualizer_engine.md  TASK-017_shua_diary_backend_media_vault.md  TASK-018_shua_diary_ollama_jbc_ai.md  TASK-019_flutter_diary_screen_and_block_library.md  TASK-020_shua_resume_backend_matrix.md
_architecture/tasks/archived/: TASK-001_pi5_ssh_and_cleanup.md  TASK-002_vscode_workspace_setup.md  TASK-003_governor_cargo_scaffold.md  TASK-004B_schema_engine_modularization.md  TASK-004_governor_hbp_broker.md  TASK-005_governor_process_registry.md  TASK-006_governor_ollama_ai_dreamloop.md  TASK-007_governor_config_systemd_deploy.md
shua_governor/: Cargo.toml  config.toml
shua_governor/deploy/: shua-governor.service
shua_governor/src/: config.rs  error.rs  main.rs
shua_governor/src/ai_router/: intent_classifier.rs  mod.rs  prompt_budget.rs
shua_governor/src/broker/: dispatcher.rs  frame.rs  mod.rs  server.rs
shua_governor/src/dream_loop/: mod.rs  scheduler.rs
shua_governor/src/logger/: log_broadcaster.rs  mod.rs
shua_governor/src/logging/: bridge.rs  broadcaster.rs  entry.rs  filter.rs  flush.rs  listener.rs  mod.rs
shua_governor/src/ollama/: client.rs  lifecycle.rs  mod.rs  model_registry.rs
shua_governor/src/registry/: cgroup_manager.rs  mod.rs  module_entry.rs  process_manager.rs
tools/: gen_workflow.py  n8n_overnight_workflow.json  overnight_agent.py  overnight_planner.py  repo_index.py  schedule_overnight.ps1  setup_overnight_agent.py  start_n8n.ps1  toggle_view.py
tools/sync_contracts/: __init__.py  __main__.py  parser.py
tools/sync_contracts/generators/: __init__.py  base.py  dart_gen.py  go_gen.py  markdown.py  python_gen.py  rust_gen.py  typescript_gen.py
tools/sync_contracts/schema/: hbp_operations.toml
