[package]
name        = "shua_governor"
version     = "0.1.0"
edition     = "2021"
description = "horAIzon 3.0 — Central governor: HBP v2 broker, process registry, Ollama lifecycle"
authors     = ["Joshua B. Ygot"]

[[bin]]
name = "shua_governor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio            = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util     = "0.3"

# MessagePack serialization
rmp-serde        = "1.3"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# HTTP client (Ollama API)
reqwest          = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Process management / signals
# nix only available on Unix targets (Pi5); cfg-gated in code
[target.'cfg(unix)'.dependencies]
nix              = { version = "0.29", features = ["signal", "process"] }

[dependencies.tokio-cron-scheduler]
version = "0.13"

# Config file
[dependencies.toml]
version = "0.8"

# Logging
[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

# UUID generation
[dependencies.uuid]
version = "1"
features = ["v4"]

# Misc
[dependencies.anyhow]
version = "1"

[dependencies.thiserror]
version = "1"

[dependencies.once_cell]
version = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto       = true
strip     = true
