[package]
name        = "shua_governor"
version     = "0.1.0"
edition     = "2021"
description = "horAIzon 3.0 — Central governor: HBP v2 broker, process registry, Ollama lifecycle"
authors     = ["Joshua B. Ygot"]

[[bin]]
name = "shua_governor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio            = { version = "1", features = ["full"] }
tokio-stream     = { version = "0.1", features = ["sync"] }

# HTTP framework
axum             = { version = "0.7", features = ["ws", "multipart"] }
tower            = "0.5"
tower-http       = { version = "0.6", features = ["cors", "fs"] }
hyper            = { version = "1", features = ["full"] }
hyper-util       = { version = "0.1", features = ["full"] }
http-body-util   = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util     = "0.3"

# MessagePack serialization
rmp-serde        = "1.3"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# HTTP client (Ollama API)
reqwest          = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# SQLite (centralized log persistence)
rusqlite         = { version = "0.31", features = ["bundled"] }

# Config file
toml             = "0.8"

# Scheduling (Dream Loop)
tokio-cron-scheduler = "0.13"

# Logging
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID generation
uuid             = { version = "1", features = ["v4"] }

# Misc
anyhow           = "1"
thiserror        = "1"
once_cell        = "1"
chrono           = { version = "0.4", features = ["serde"] }

# Process management / signals (Unix / Pi5 only)
[target.'cfg(unix)'.dependencies]
nix              = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto       = true
strip     = true
