[package]
name = "shua_governor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
sysinfo = "0.30.12"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
hyper-util = { version = "0.1", features = ["full"] }
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
futures-util = "0.3"
chrono = { version = "0.4", features = ["clock"] }
tokio-stream = { version = "0.1", features = ["sync"] }
# ── Phase 8: Media Server ─────────────────────────────────────────────────────
sha2 = "0.10"                                              # SHA-256 streaming hasher (CAS fingerprint)
infer = "0.16"                                             # Magic-byte MIME detection (rejects spoofed Content-Type)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }  # WebP thumbnail generation (spawn_blocking wrapped)
dashmap = "5"                                              # Lock-free concurrent map for SSE upload progress tracking
tokio-util = { version = "0.7", features = ["io"] }        # AsyncReadExt + BufReader for chunk assembly
quick-xml = { version = "0.36", features = ["serialize"] } # Hand-rolled WebDAV XML serialization (PROPFIND response)
mime_guess = "2"                                           # Content-Type from file extension (serve route)
anyhow = "1"                                               # Ergonomic error boxing in spawn_blocking closures
